[package]
name = "optimize-image"
version = "0.1.0"
edition = "2021"
description = "Image optimization tool - converts images to WebP format with configurable size profiles"

[[bin]]
name = "optimize-image"
path = "src/main.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff"] }
webp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
uuid = { version = "1", features = ["v4"] }
